Fix profile text contrast

--- a/alien-night-theme--theme-switcher-desktop.css
+++ b/alien-night-theme--theme-switcher-desktop.css
@@ -2,8 +2,12 @@
 Alien Night Theme (Desktop) - A Dark Theme for Discourse
 Author: Ignaz Biegler
 Github: https://github.com/B-iggy/discourse-dark-theme
-Version 1.1
+Version 1.1.1
 */
+.theme-switcher {
+    margin-left: 10%;
+}
+
 .theme-switcher-attr {
     color: #fff !important;
     font-weight: bold;
@@ -23,11 +27,9 @@ Version 1.1
     border: 1px solid #fff;
 }
 
-/*
-CSS of the Dark Theme in combination with the modifier class from the theme switcher
- */
 html.dark,
-html.dark body {
+html.dark body,
+html.dark .user-main .user-content {
     background-color: #10161d;
 }
 
@@ -56,7 +58,13 @@ html.dark #topic-closing-info,
 html.dark .content-list ul li a,
 html.dark .topic-map .map .number, .topic-map .map i,
 html.dark .topic-map h3,
-html.dark .topic-map .buttons .btn:hover {
+html.dark .topic-map .buttons .btn:hover,
+html.dark .user-preferences .static,
+html.dark .d-editor-button-bar button,
+html.dark .category-list-item h3 a[href],
+html.dark .category-list-item>footer figure,
+html.dark .user-preferences .static,
+html.dark .d-editor-button-bar button {
     color: #fff;
 }
 
@@ -132,7 +140,6 @@ html.dark #reply-control .wmd-controls .d-editor-input, #reply-control .wmd-cont
     background-color: #10161d;
     color: #fff;
 }
-
 
 html.dark #reply-control {
     background-color: #26313e;
